@startuml lab1

    class User {
        +name: string
        +login: string
        -password: string  
        +{static} count: int = 0   
        +showInfo(): void
        +__destruct(): void
    }

    class SuperUser {
        +role: string
        +{static} count: int = 0
        +showInfo(): void
        +getInfo(): array
    }

    interface SuperUserInterface {
        +{abstract} getInfo()
    }

    abstract class AbstractUser {
        +{abstract} showInfo()
    }

    AbstractUser --|> User
    User --|> SuperUser
    SuperUser ..|> SuperUserInterface

@enduml